@@ -1,8 +1,7 @@
 package tests;
 
-import com.github.javafaker.Faker;
-import io.qameta.allure.Description;
 import models.OrderCreationData;
+import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
@@ -12,56 +11,45 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
-import static org.hamcrest.Matchers.hasItem;
-import static org.hamcrest.Matchers.notNullValue;
-
 @RunWith(Parameterized.class)
-public class OrdersCreationAPITest {
+public class OrdersCreationAPITest extends BaseOrderAPITest {
 
-    public final List<String> colors;
+    private final String colors;
 
-    public OrdersCreationAPITest(List<String> colors) {
+    @Before
+    public void setUp() {
+        super.setUp();
+    }
+
+    public OrdersCreationAPITest(String colors) {
         this.colors = colors;
     }
 
     @Parameterized.Parameters
     public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][] {
-                { List.of("BLACK") },
-                { List.of("GREY") },
-                { List.of("BLACK", "GREY") },
-                { null }
+        return Arrays.asList(new Object[][]{
+                {"BLACK"},
+                {"BLACK, GREY"},
+                {""}
         });
     }
 
     @Test
-    @Description("Тест создания заказа")
-    public void testOrderCreation() {
-        OrderCreationData orderData = generateOrderCreationData(colors);
-        io.restassured.response.Response response = APISteps.createOrder(orderData);
-        response.then().statusCode(orderData.getStatusCode());
-        response.then().body("track", notNullValue());
-        if (colors != null) {
-            for (String color : colors) {
-                response.then().body("color", hasItem(color));
-            }
-        }
-    }
-
-    private static OrderCreationData generateOrderCreationData(List<String> colors) {
-        Faker faker = new Faker();
-
-        return new OrderCreationData(
-                faker.name().firstName(),
-                faker.name().lastName(),
-                faker.address().fullAddress(),
-                faker.number().randomDigit(),
-                faker.phoneNumber().phoneNumber(),
-                faker.number().randomDigit(),
-                faker.date().future(5, java.util.concurrent.TimeUnit.DAYS).toString(),
-                faker.lorem().sentence(),
-                colors,
+    public void testOrderCreationWithColors() {
+        List<String> colorList = colors.isEmpty() ? null : Arrays.asList(colors.split(", "));
+        OrderCreationData orderData = new OrderCreationData(
+                testFirstName,
+                testLastName,
+                testAddress,
+                testMetroStation,
+                testPhone,
+                testRentTime,
+                testDeliveryDate,
+                testComment,
+                colorList,
                 201
         );
+
+        APISteps.createOrder(orderData);
     }
 }
